--- a/Server/package.json
+++ b/Server/package.json
@@ -16,7 +16,7 @@
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongose": "^0.0.2-security",
+    "mongoose": "^8.3.1",
     "multer": "^1.4.5-lts.1",
     "normalize-url": "^8.0.1"
   },
