--- a/Server/package.json
+++ b/Server/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
+    "mongose": "^0.0.2-security",
     "multer": "^1.4.5-lts.1",
     "normalize-url": "^8.0.1"
   },
